--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="legislature">Legislature</string>
     <string name="maintenance">Maintenance</string>
     <string name="tuning">Tuning</string>
+    <string name="details">Details</string>
+    <string name="details">Details</string>
+    <string name="user_name">User name:</string>
+    <string name="role">Role</string>
 </resources>
